Css fix test (#1485)
* Fixing table layout.  (Maybe?)

* Adding missing newline

* Adjusting z-index to fix icon overlap issues

* Updating test rule

* Varying the test

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -3612,9 +3612,9 @@ a[href*="#no-click"], img[src*="#no-click"] {
 }
 
 /* CSS hacks - Aug 2021 */
-.root,
-.drift-widget-message-preview-wrapper {
-  display: none;
+#root,
+#drift-widget-message-preview-wrapper {
+  display: none !important;
 }
 
 article section.page table {
@@ -3624,3 +3624,4 @@ article section.page table {
 .gdpr-modal {
   z-index: 9999;
 }
+  
